[package]
name = "dfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
ctrlc = { version = "3.4.5", features=["termination"] }
libp2p = { version = "0.54.1", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.28"
serde = { version = "1.0.217", features = ["default", "serde_derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"

[build-dependencies]
tonic-prost-build = "0.14.2"